@@ -1,13 +1,21 @@
-#!/usr/bin/env python
-# -*- coding: utf-8 -*-
-
+# Licensed under the Apache License, Version 2.0 (the "License"); you may
+# not use this file except in compliance with the License. You may obtain
+# a copy of the License at
+#
+#      http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
+# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
+# License for the specific language governing permissions and limitations
+# under the License.
 """Tests for `rbd_iscsi_client` package."""
 
 import mock
 import requests
 import unittest
 
-from rbd_iscsi_client import rbd_iscsi_client as client
+from rbd_iscsi_client import client
 from rbd_iscsi_client import exceptions
 
 
@@ -29,7 +37,6 @@ class TestRbd_iscsi_client(unittest.TestCase):
 
     def tearDown(self):
         self.client = None
-
 
     def test_request_timeout(self):
         self.client._http_log_req = mock.Mock()
