@@ -1,22 +1,0 @@
-#!/usr/bin/env python
-# -*- coding: utf-8 -*-
-
-"""Tests for `rbd_iscsi_client` package."""
-
-
-import unittest
-
-from rbd_iscsi_client import rbd_iscsi_client
-
-
-class TestRbd_iscsi_client(unittest.TestCase):
-    """Tests for `rbd_iscsi_client` package."""
-
-    def setUp(self):
-        """Set up test fixtures, if any."""
-
-    def tearDown(self):
-        """Tear down test fixtures, if any."""
-
-    def test_000_something(self):
-        """Test something."""
