@@ -1,3 +1,5 @@
 CHANGES
 =======
 
+* Added basic unit tests
+* Initial commit
